# wiscanet-gui

./: .gitignore  AUTHORS  Cargo.toml  README.md
db/: db.sqlite
migrations/2020-09-12-172547_edgenodes/: down.sql  up.sql
migrations/2020-09-14-164829_apps/: up.sql
src/: application.rs  edgenode.rs  main.rs  schema.rs
static/: app_logic.js  index.html.tera
